# arduino-safe-traffic-light

./: .gitignore  CMakeLists.txt  README.md  check_stateMachine  output  safe-traffic-light-advanced.ino  safe-traffic-light.c  safe-traffic-light.h  state-machine.c  state-machine.h  traffic-light-circuit.c  traffic-light-circuit.h  util.c  util.h
docs/safe-traffic-light-advanced/: safe-traffic-light-advanced-cache.lib  safe-traffic-light-advanced.pro  safe-traffic-light-advanced.sch
mock/: CMakeLists.txt  check_trafficLight  mock.c
spec/: CMakeLists.txt  check_trafficLight  state-machine.spec.c  tests.c  tests.h  traffic-light-circuit.spec.c
